fix background  image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 .background-image {
   margin: 0;
   background: url(../images/cliffTree.jpg)  top/contain no-repeat fixed;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   position: fixed;
   z-index: 1;
